Fix gap at top of page.

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -42,7 +42,8 @@ h1
     a
       +replace-text-with-dimensions("header_logo.png")
       display: block
-      margin: 14 auto
+      margin: 0 auto
+      padding-top: 14px
 
 @mixin menu-item-highlight
   background: #AAAAAA
